[project]
name = "geodesic-distance-transform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "imageio==2.37.2",
    "matplotlib[standard]>=3.10.8",
    "numba==0.63.1",
    "numpy==2.3.5",
    "pydantic[standard]>=2.12.5",
]
